app/assets/stylesheets/pages/_home.scss
/* BODY */

body {
  // background-color: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
  // height: 100vh;
}

// 1st screen of HOME below:

.wrapper-home1 {
  background: asset-url('swimmer-bg.jpg'), linear-gradient(to bottom, #2502d3, #006fff 75%);
  background-size: cover;
  height: 100vh;
  background-blend-mode: overlay;
  width: 100vw;
  z-index: -5;
  position: absolute;
  top: 0px;
  text-align: center;
  // &:before {
  //   content: '';
  //   position: absolute;
  //   top: 0;
  //   right: 0;
  //   bottom: 0;
  //   left: 0;
  //   background-image: linear-gradient(to bottom,rgb(37,2,211),rgb(0, 111, 255));
  //   opacity: .9;
  // }
}

.button-scroll-1 {
  position: absolute;
  bottom: 3vh;
  left: 47vw;
}

.dori-home1-content {
  position: relative;
  top: 48vh;


  .dori-title {
    h1 {
      letter-spacing: 15px;
      font-size: 100px;
      position: relative;
      color: $white;
      padding-left: 13px;
      margin: 0px;
    }
  }

  .dori-description {
    p {
    padding: 0px 42px;
    margin: 0px;
    margin-top: -7px;
    line-height: 21px;
    font-size: 17px;
    letter-spacing: 1.3px;
    }
  }

  .button-commencer {
    display: flex;
    justify-content: center;
    a {
      text-decoration: none;
      &:focus {
        outline: none;
      }
    }
    h2 {
      font-size: 24px;
      border: 5px solid rgb(255, 224, 116);
      border-radius: 10px;
      padding: 7px 37px;
      color: rgb(255, 224, 116);
      font-family: "Roboto";
      font-weight: bold;
      letter-spacing: 5px;
      margin-top: 18px;
    }
  }


}


// 2nd screen of HOME below:
.wrapper-home2 {
  background: asset-url('swimmer-bg2.jpg'), linear-gradient(to bottom, #2502d3 10%, #006fff 93%);
  background-size: cover;
  height: 100vh;
  background-blend-mode: overlay;
  width: 100vw;
  z-index: -1;
  position: absolute;
  top: 0px;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  .button-scroll-up-1 {
    position: absolute;
    top: 4vh;
    img {
      transform: scaleY(-1);
    }
  }
  .button-scroll-down-2 {
    position: absolute;
    bottom: 4vh;
  }
  .dori-home2-content {
    position: relative;

    .dori-explanation {
      margin: 0px;
      padding: 0px;
      height: 408px;
      p {
        color: $white;
        font-weight: bold;
        padding: 41px 50px;
        line-height: 24px;
        font-size: 20px;
        letter-spacing: 1px;
        position: relative;
        bottom: 30px;
        margin: 0px;
      }

    }
  }
}

// 3rd screen of HOME below:

.wrapper-home3 {
  background: asset-url('swimmer-bg3.jpg'), linear-gradient(to bottom, #2502d3 10%, #006fff 93%);
  background-size: cover;
  height: 102vh;
  background-blend-mode: overlay;
  width: 100vw;
  z-index: -1;
  position: absolute;
  top: 0px;
  text-align: center;
  .dori-home3-content {
    position: relative;
    top: 52vh;
    .dori-testimonial {
      .open-quotes {
        position: absolute;
        left: 30px;
        top: 4px;
        opacity: 0.5;
      }
      .closed-quotes {
        position: absolute;
        right: 30px;
        bottom: 4px;
        opacity: 0.5;
      }
      p {
        color: $white;
        font-weight: lighter;
        margin: 0px;
        padding: 0px 44px;
        height: 22vh;
        overflow: scroll;
      }
      .action-slider {
        display: flex;
        align-items: center;
        justify-content: center;
        padding-top: 10px;
        .round-selection {
          border: 1px solid white;
          width: 13px;
          height: 13px;
          border-radius: 50%;
          margin: 0px 4px;
        }
        #selected-one {
          background-color: $yellow;
          width: 18px;
          height: 18px;
        }
      }
    }
  }
  .button-scroll-up-2 {
    position: absolute;
    top: 4vh;
    left: 47vw;
    img {
      transform: scaleY(-1);
    }
  }
}

// old-home CSS below:

.container {
  padding: 0px 0px 0px 0px;
  margin: 0px 0px 0px 0px;

}

#et-plouf {
  margin-right: 0%;
  margin-left: 2%;
  height: 84px;
  margin-bottom: 30px;
  margin-top: 0px;
  display: flex;
  padding-top: 20px;
  align-items: center;
  margin-left: 0px;
  margin-right: 0px;
  .btn-lg {
    padding: 10px 16px;
    width: 212px;
    font-size: 23px;
    line-height: 0.8;
    border-radius: 40px;
    background: none;
    height: 43px;
    color: white;
    letter-spacing: 2px;
    text-align: center;
    padding-bottom: 10px;
    border: 2px solid white;
    box-shadow: 1px 1px 9px rgba(255,255,255,0.3), -1px -1px 9px rgba(255,255,255,0.3), inset 0px 0px 15px rgba(255,255,255,0.5);
    text-shadow: 0px 0px 18px rgba(255,255,255,0.8);
  }
}

.btn-primary {
  margin-bottom: 40px;
}

/* HEADER */

.header-container {
  display: grid;
  grid-template-rows: 50% 50%;
  grid-template-columns: 40% 60%;
  width: 100vw;
  // padding-top: 0;
  // margin: 0;
  background-size: cover;
  background-position: center;

}

.baseline-header {
  grid-row: 1 / span 1;
  grid-column: 2 / span 1;
  padding-top: 34px;
  padding-bottom: 10px;
  padding-right: 10px;
  h4 {
    margin: 0px;
    font-size: 20px;
  }
}

.baseline-body {
  grid-row: 2 / span 1;
  grid-column: 2 / span 1;
  font-size: 12px;
  letter-spacing: 0.5px;
  padding-right: 5px;
}

.image-dori {
  grid-row: 1 / span 2;
  grid-column: 1 / span 1;
  align-self: center;
  img {
    width: 130px;
    padding-left: 15px;
    padding-right: 10px;
    padding-bottom: 10px;
    padding-top: 36px;

  }

}

h4 {
  color: #FFFFFF;
  font-weight: bold;
  font-size: 20px;
}

p {
  color: #EBEBF3;
  font-weight: lighter;
}

.btn-start {

  margin-top: 30px;
  padding-bottom: 50px;
}

/* VALUE PROPOSITION */

.proposition {
  background-image: asset-url('Midmenu.png');
  background-size: cover;
  background-position: center;
  height: 250px;
  p {
    color: #666E88;
    line-height: 1.3;
    font-size: 14px;
    font-weight: normal;
  }

  p.strong {
    color: #394A7D;
    font-size: 14px;
    line-height: 1.3;
  }
}

.proposition-container {
  display: grid;
  grid-template-rows: 33% 33% 33%;
  grid-template-columns: 30% 70%;
  padding-top: 12px;
}

.proposition-wave {
  grid-row: 1 / span 3;
  grid-column: 1 / span 1;
  padding-left: 30px;
  padding-top: 5px;
}

.proposition-text-one {
  grid-row: 1 / span 1;
  grid-column: 2 / span 1;
  padding-top: 32px;
  margin-left: -22px;
}

/*HEAD*/
.proposition-text-two {
  grid-row: 2 / span 1;
  grid-column: 2 / span 1;
  padding-top: 12px;
}

.proposition-text-three {
  grid-row: 3 / span 1;
  grid-column: 2 / span 1;
  padding-top: 12px;
  margin-left: -12px;
}


.space-between-80px{
  height: 80px;
  background-color: transparent;
}

.space-between-57px{
  height: 57px;
  background-color: transparent;
}


.testimonial-slider{
  h4 {
    text-align: center;
    font-size: 18px;
    letter-spacing: 1.0px;
  }

  p {
    color: white;
    font-size: 14px;
    color: rgba(255,255,255,0.85);
  }
}

.testimonial-header {
  height: 66px;
  text-align: center;

  img {
   position: relative;
   top: -68px;
    width: 87px;
  }
}

.testimonial-body {
  margin-top: -10px;
  padding: 0 30px;

  p {
    text-align: justify;
  }
}
.testimonial-footer {
  display: flex;
  align-items: center;
  justify-content: center;
  .circles-testimonials {
    background: white;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    margin: 0px 3px;
    border: 1px solid rgba(4, 23, 94, 1);
    &:first-child {
      width: 9px;
      height: 9px;
      background: none;
      border: 1px solid white;
    }
    &:last-child {
      width: 9px;
      height: 9px;
      background: none;
      border: 1px solid white;
    }
  }
}

